2012-10-24  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/traits/is_pointer.h: traits to identify if a type is a pointer
        * include/Rcpp/traits/un_pointer.h: traits to remove a pointer
        * include/Rcpp/module/Module_generated_get_return_type.h : handle pointer return types
        * include/Rcpp/config.h: define RCPP_HAS_DEMANGLING for MAC OS <= 10.7 (up to Lion)
        * include/Rcpp/module/macros.h: new file that contains macro to help with modules
        * include/Rcpp/traits/r_type_traits.h : new tag to allow as<T> where T
        is some class exposed in a module
        * include/Rcpp/as.h : implementation of as<T> in that case

2012-10-23  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/internal/wrap.h: new function module_wrap used internally by modules
        * include/Rcpp/module/Module_generated_CppMethod.h: using module_wrap and
        simplified the code (removing 35% of the generated code now rendered useless)
        * include/Rcpp/module/Module_generated_PointerCppMethod.h: using module_wrap and
        simplified the code
        * include/Rcpp/traits/module_wrap_traits.h : new file. helping implementation of 
        module_wrap
        
        * R/00_classes.R: C++OverloadedMethods gets the field "nargs" to capture
        the number of arguments
        
        * R/01_show.R: cleanup
        
        * R/Module.R: handle the case where a method has no argument. In that 
        case, the ellipsis does not end up in the formals
        
        * include/Rcpp/Module.h: exposing nargs in C++OverloadedMethods

2012-10-22  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/as.h: support for as<> for module objects
        * include/Rcpp/Module.h: idem
        * include/Rcpp/traits/r_type_traits.h: idem
        * src/Module.cpp: idem

2012-10-21  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/traits/wrap_type_traits.h: support for wrapping module objects